Try to modify everything and fail

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					</button>
 					<hr width="10px">
 				</li>
-				<li id="equipe">
+				<li id="contact">
 					<button>
 						<img src="data/img/picto/equipe.png">
 					</button>
@@ -159,7 +159,7 @@
 				</p>
 			</div>
 		</div>
-		<div id="equipeInfos" class='openningInterface'>
+		<div id="contactInfos" class='openningInterface'>
 			<h1><mark>N</mark>ous <mark>C</mark>ontacter </h1>
 			<div id="contactToBeScroll">
 				<p>
@@ -198,33 +198,33 @@
 			<div id = "partenairesToBeScroll">
 				<ul id='partenairesList'>
 					<li class="partenairesListElement">
-						<img src="data/img/logo/mis.png">
-						<h3><a href="https://www.mis.u-picardie.fr">MIS</a></h3>
-						<p><a href="https://www.mis.u-picardie.fr">Modélisation, Information et Systèmes</a></p>
+							<img src="data/img/logo/mis.png">
+						<h3>MIS</h3>
+						<p>Modélisation, Information et Systèmes</p>
 
 					</li>
 					<li class="partenairesListElement">
-						<img src="data/img/logo/amiensMetropole.png">
+							<img src="data/img/logo/amiensMetropole.png">
 						<h3>Amiens Métropole</h3>
 						<p></p>
 					</li>
 					<li class="partenairesListElement">
-						<img src="data/img/logo/dracPicardie.jpg">
+							<img src="data/img/logo/dracPicardie.jpg">
 						<h3>DRAC Picardie</h3>
 						<p>Direction régionale des Affaires Culturelles de Picardie</p>
 					</li>
 					<li class="partenairesListElement">
-						<img src="data/img/logo/esad.png">
+							<img src="data/img/logo/esad.png">
 						<h3>ESAD Amiens</h3>
 						<p>Ecole Supérieure d'Art et de Design d'Amiens</p>
 					</li>
 					<li class="partenairesListElement">
-						<img src="data/img/logo/ensg.png">
+							<img src="data/img/logo/ensg.png">
 						<h3>ENSG</h3>
 						<p>Ecole Nationale des Sciences Géographique</p>
 					</li>
 					<li class="partenairesListElement">
-						<img src="data/img/logo/ign.jpg">
+							<img src="data/img/logo/ign.jpg">
 						<h3>IGN</h3>
 						<p>Institut National de l'Information Géographique et Forestière</p>
 					</li>
